--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=ZCOOL+XiaoWei&display=swap" rel="stylesheet">
+  <script src="js/script.js" async></script>
 </head>
 <body id="body1">
   <header>
     Welcome to the FREE Mailing List for FREE things FREE!!!
   </header>
   <div id="deev">
-    <form>
+    <form method="get" autocomplete="on" action="#null">
       <div>
         <label> Email Address:</label>
       </div>
