putzing with validate
trying to get validate to work

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div>
         <label> Email Address:</label>
       </div>
-    <input type="text" id="email">
+    <input type="email" id="email" required>
       <div>
         <label> Phone Number:</label>
       </div>
