--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     Welcome to the FREE Mailing List for FREE things FREE!!!
   </header>
   <div id="deev">
-    <form name="joeform" method="get" autocomplete="on" action="#null">
+    <form name="joeform" method="get" autocomplete="on" action="#null" onsubmit="return subby()">
       <div>
         <label> Email Address:</label>
       </div>
